--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<li><a href="#about">About</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="nav-cta">Resume</a>
+				<li><a href="resume.pdf" target="_blank" rel="noopener noreferrer" class="nav-cta">Resume</a>
 				</li>
 			</ul>
 
@@ -137,7 +137,7 @@
 						best noodle soup in D.C.</p>
 
 					<div class="about-buttons">
-						<a href="assets/resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
+						<a href="resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
 							<svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
 								<path
 									d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8l-6-6zm4 18H6V4h7v5h5v11z" />
