--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 				<li><a href="#about">About</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a href="resume.pdf" target="_blank" rel="noopener noreferrer" class="nav-cta">Resume</a>
-				</li>
+
 			</ul>
 
 			<button class="nav-toggle" aria-label="Toggle navigation">
@@ -85,6 +84,14 @@
 					</a>
 				</div>
 			</div>
+
+			<div class="hero-visual" aria-hidden="true">
+				<div class="scene">
+					<div id="hero-carousel" class="carousel">
+						<!-- Cards injected by JS -->
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -125,25 +132,16 @@
 				</div>
 
 				<div class="about-text">
-					<p>My coding journey didn't start in a computer lab — it started with shrimp fried rice and sweet &
-						sour pork. Growing up in my family's Chinese restaurant, I saw first-hand how much hard work
-						went into every single day. So, I started tinkering.</p>
-					<p>I built simple dashboards to track our most popular dishes (spoiler: it was always General Tso's
-						chicken) and wrote little scripts to help my parents get a better handle on inventory. That's
-						when I fell in love with using technology to solve real, everyday problems.</p>
-					<p>It's the same energy I bring to my Computer Science studies at GWU today — I just love building
-						things that are genuinely useful.</p>
-					<p>When I'm not behind a keyboard, I'm probably exploring a new coffee shop or trying to find the
-						best noodle soup in D.C.</p>
+					<p>Growing up in a family business, I learned early on that the best solutions are the ones that
+						solve real, everyday problems. I started my coding journey by building custom tools to automate
+						inventory and track sales, discovering a passion for data-driven efficiency.</p>
+					<p>Today, as a Computer Science student at GWU, I apply that same pragmatic approach to building
+						scalable full-stack applications using Python, React, and Cloud technologies.</p>
+					<p>When I'm not behind a keyboard, I'm probably getting some sun, cooking a steak, or hanging out
+						with friends.</p>
 
 					<div class="about-buttons">
-						<a href="resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-							<svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
-								<path
-									d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8l-6-6zm4 18H6V4h7v5h5v11z" />
-							</svg>
-							View My Resume
-						</a>
+
 						<a href="#contact" class="btn btn-outline">Get In Touch</a>
 					</div>
 				</div>
